# ray

./: Cargo.toml  result.ppm  result_circle.ppm  result_circle_3d.ppm  result_world.ppm
.github/workflows/: rust.yml
src/: lib.rs  main.rs  point.rs  tuple.rs  vector.rs  world.rs
src/base/: colour.rs  mod.rs  point.rs  tuple.rs  vector.rs
src/math/: colour.rs  det.rs  matrix.rs  matrix_at.rs  matrix_const.rs  matrix_det.rs  matrix_from_iter.rs  matrix_indexing.rs  matrix_invert.rs  matrix_invertible.rs  matrix_size.rs  matrix_sub.rs  matrix_transpose.rs  mod.rs  point.rs  round.rs  submatrix.rs  tuple.rs  vector.rs
src/model/: camera.rs  canvas.rs  comp.rs  environment.rs  intersection.rs  material.rs  mod.rs  point_light.rs  projectile.rs  ray.rs  refractive_indices.rs  sphere.rs  world.rs
src/pattern/: gradient.rs  mod.rs  nested.rs  pattern.rs  pattern_kind.rs  perlin.rs  ring.rs  test_pattern.rs
src/patterns/: checker.rs  gradient.rs  mod.rs  nested.rs  pattern.rs  pattern_at.rs  perlin.rs  radial_gradient.rs  ring.rs  solid.rs  stripe.rs
src/shape/: intersect.rs  mod.rs  normal.rs  plane.rs  shape.rs  shape_kind.rs  sphere.rs
src/shapes/: cube.rs  mod.rs  plane.rs  shape.rs  shape_kind.rs  sphere.rs
src/viewer/: canvas.rs  drawable.rs  mod.rs  to_file.rs
tests/: tests.rs
tests/expand/: enum_variants_as_structs_named_test.expanded.rs  enum_variants_as_structs_named_test.rs  enum_variants_as_structs_named_w_meta_test.expanded.rs  enum_variants_as_structs_named_w_meta_test.rs  enum_variants_as_structs_test.expanded.rs  (+3 more)
