[package]
name = "ray"
version = "0.1.0"
edition = "2021"

[dependencies]
macrotest = "1.0.9"
num = "0.4.1"
pixels = "0.13.0"
rand = "0.8.5"

[dependencies.winit_input_helper]
version = "=0.14"

[dependencies.winit]
version = "=0.28"
features = ["wayland"]

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
